# suddenly-ai-hub

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALL.md  LICENSE  README.md  SCRAPING_GUIDE.md  init.py  init.sh  jdroll_cookies.json  opencode.json  pyproject.toml  pytest.ini  railway.toml  requirements.txt
.aidd/: aidd-custom.json  manifest.json  marketplaces.json
.claude/agents/: ada.md
.codex/: config.toml
.codex/agents/: alexia.toml  claire.toml  iris.toml  kent.toml  martin.toml
.cursor/agents/: iris.md  martin.md
.github/: copilot-instructions.md
.github/prompts/: 01-generate-agent.prompt.md  01-generate-architecture.prompt.md  01-generate-command.prompt.md  01-generate-rules.prompt.md  01-generate-skill.prompt.md  01-init.prompt.md  01-onboard.prompt.md  02-create-user-stories.prompt.md  03-components-behavior.prompt.md  03-plan.prompt.md  (+13 more)
.mistral/: instructions.md
aidd_docs/: AIDD_GUIDE.md  CATALOG.md  UPDATES.md  WORKFLOW.md
config/: scraping_config.ini
data/: renpy-corpus.jsonl  session1_req1_20260513_181927.html  session1_req1_20260513_182424.html  session1_req1_20260513_182656.html  session1_req1_20260513_183242.html  test-dataset-rp.jsonl
docs/: AIDD_INTEGRATION.md  corpus-public.md  data-format.md  eval-metrics.md  model-choice.md
evaluation/: evaluate_lora.py  spec-tests-lora.md
gateway/: Dockerfile  adapter_router.py  auth.py  config.py  main.py  models.py  requirements.txt
infra/: docker-compose.yml
kanban/: DASHBOARD.md  GUIDE.md  README.md
logs/: session1_20260513_181631.json  session1_20260513_183524.json
muses/: __init__.py  client.py  config.py
pipeline/: evaluate.py  format_corpus.py  generate_eval.py  requirements.txt
scripts/: README_SCRAPER.md  aidd-to-hermes.py  baseline.py  bootstrap_initial_cell.py  changelog.sh  convert_to_jsonl.py  end_plan.sh  evaluate.py  infer.py  learn.sh  list_models.py  run-diff.py  scrape_couroberon.py  scrape_jdroll.py  scrape_jdroll_prudent.py  scraper_jdroll.py  session1_jdroll.py  session2_jdroll_campaigns.py  session2_jdroll_robuste.py  session2_simple.py  setup-python-env.sh  snapshot_feedback.py  sync_github.sh  train_model.py  train_together.py
tests/: conftest.py  test_anonymize.py  test_auth.py  test_evaluate.py  test_evaluation.py  test_fireworks_provider.py  test_format_corpus.py  test_gateway.py  test_provider_base.py  test_provider_factory.py  test_suddenly_ai_hub.py  test_together_provider.py  test_train_together.py
training/: eval-dataset.jsonl  lora-situation.yml  lora-univers.yml  suddenly-13b.yml  suddenly-7b.yml
(+337 files in other folders)
