[project]
name = "suddenly-ai-hub"
version = "0.1.0"
description = "LoRA adapters and gateway for Suddenly's French roleplay models."
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "cryptography>=43,<45",
]

pipelines = [
    "beautifulsoup4>=4.12.0",
    "datasets>=2.14.0",
    "spacy>=3.7,<4.0",
    "langdetect>=1.0.9",
    "fr-core-news-md @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.7.0/fr_core_news_md-3.7.0-py3-none-any.whl",
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.0/en_core_web_md-3.7.0-py3-none-any.whl",
]

scraper = [
    "playwright==1.40.0",
    "beautifulsoup4==4.12.2",
]

dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = [".", "apps"]
include = ["pipelines*", "gateway*"]
exclude = ["tests*", "venv*", "data*", "logs*", "aidd_docs*"]

[tool.pytest.ini_options]
pythonpath = [".", "apps"]
tmp_path_retention_count = 3
tmp_path_retention_policy = "failed"
