[project]
name = "suddenly-muses"
version = "0.1.0"
description = "Service mutualisé d'assistance créative pour Suddenly — tables curées et pipeline ML léger CPU-only."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "pydantic>=2.0,<3.0",
    "numpy>=1.26,<3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.7,<4.0",
]

pipelines = [
    "beautifulsoup4>=4.12.0",
    "spacy>=3.7,<4.0",
    "langdetect>=1.0.9",
    "fr-core-news-md @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.7.0/fr_core_news_md-3.7.0-py3-none-any.whl",
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.0/en_core_web_md-3.7.0-py3-none-any.whl",
]

scraper = [
    "playwright==1.40.0",
    "beautifulsoup4==4.12.2",
]

dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["muses*", "pipelines*"]
exclude = ["tests*", "venv*", "data*", "logs*", "aidd_docs*", "apps*"]

[tool.pytest.ini_options]
pythonpath = ["."]
tmp_path_retention_count = 3
tmp_path_retention_policy = "failed"
